--- a/10-trabalhando-com-o-DOM.html
+++ b/10-trabalhando-com-o-DOM.html
@@ -139,7 +139,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts2.js"></script>
 
     </body>
 
