--- a/11-funcoes.html
+++ b/11-funcoes.html
@@ -236,7 +236,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts2.js"></script>
 
     </body>
 
