--- a/12-tipos-dados-arrays.html
+++ b/12-tipos-dados-arrays.html
@@ -206,7 +206,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts2.js"></script>
 
     </body>
 
