--- a/13-tipos-dados-objetos.html
+++ b/13-tipos-dados-objetos.html
@@ -234,7 +234,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts2.js"></script>
 
     </body>
 
