--- a/14-metodos-de-objetos.html
+++ b/14-metodos-de-objetos.html
@@ -126,7 +126,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts2.js"></script>
 
     </body>
 
