--- a/17-manipulacao-css.html
+++ b/17-manipulacao-css.html
@@ -115,7 +115,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts3.js"></script>
 
     </body>
 
