--- a/18-outros-get-element.html
+++ b/18-outros-get-element.html
@@ -139,7 +139,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts3.js"></script>
 
     </body>
 
