19-loop-for-for-in

--- a/19-loop-for-for-in.html
+++ b/19-loop-for-for-in.html
@@ -223,7 +223,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts3.js"></script>
 
     </body>
 
