--- a/20-loop-while-do-while.html
+++ b/20-loop-while-do-while.html
@@ -118,7 +118,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts3.js"></script>
 
     </body>
 
