--- a/21-condicionais.html
+++ b/21-condicionais.html
@@ -209,7 +209,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts3.js"></script>
 
     </body>
 
