--- a/Projeto_1/index.html
+++ b/Projeto_1/index.html
@@ -46,7 +46,7 @@
 					<div id="hamburguer-icon" class="hamburguer-icon small-2 columns text-right">
                         <div class="table">
                             <div class="table-cell">
-                                <img src="img/menu/hamburguer.svg">
+                                <img class="open-icon" src="img/menu/hamburguer.svg">
                             </div> 
                         </div>
 					</div>
@@ -74,9 +74,9 @@
                         <div class="table">
                             <div class="table-cell">
                                 <ul class="sliding-header-menu-li">
-                                    <li><a href="index.html#about-us">Sobre Nós</a></li>
-									<li><a href="index.html#servicos">Serviços</a></li>
-									<li><a href="index.html#contact-us">Contacto</a></li>
+                                    <li onclick="fecharMenu()"><a href="index.html#about-us">Sobre Nós</a></li>
+									<li onclick="fecharMenu()"><a href="index.html#servicos">Serviços</a></li>
+									<li onclick="fecharMenu()"><a href="index.html#contact-us">Contacto</a></li>
                                 </ul>
                             </div>
                         </div>
