--- a/Projeto_1/index.html
+++ b/Projeto_1/index.html
@@ -165,10 +165,7 @@
                         </div>
                         
                         <div class="stripe-content small-10 columns no-padding">
-                            <span id="service-title">Webdesign.</span> <p id ="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus 
-                            tincidunt sem non sodales. Nunc et quam in magna vehicula sollicitudin. 
-                            Aliquam erat volutpat. Maecenas dolor mi, aliquet ac quam aliquet, condimentum 
-                            dictum nisi.</p>
+                            <span id="service-title">Webdesign.</span> <p id ="service-text">LoLorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus tincidunt sem non sodales. Nunc et quam in magna vehicula sollicitudin. Aliquam erat volutpat. Maecenas dolor mi, aliquet ac quam aliquet, condimentum dictum nisi.</p>
                         </div>
                             
                         <div id="service-next" class="stripe-arrow small-1 columns no-padding">
