--- a/25-local-storage.html
+++ b/25-local-storage.html
@@ -145,7 +145,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts4.js"></script>
 
     </body>
 
