--- a/26-data-hora.html
+++ b/26-data-hora.html
@@ -280,7 +280,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts4.js"></script>
 
     </body>
 
