--- a/28-switch.html
+++ b/28-switch.html
@@ -175,7 +175,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts4.js"></script>
 
     </body>
 
