--- a/32-exercicio4.html
+++ b/32-exercicio4.html
@@ -122,7 +122,8 @@
 
                 <div id="cronometro">00:00:00 000</div>
                 <br><br>
-                <button id="comecar_parar">Começar</button>
+                <button id="comecar">Começar</button>
+                <button id="parar">Parar</button>
                 <button id="zerar">Zerar</button>
 
                 <br><br>
@@ -195,7 +196,7 @@
 
         {
             'placa': 'AAA-0198',
-            'caregoria': '1',
+            'categoria': '1',
         },
 
         {
