--- a/34-jquery-sintaxe.html
+++ b/34-jquery-sintaxe.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
     <head>
-        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/jquery-3.7.1.min.js"></script>
         <link rel="stylesheet" href="css/default.css">
         <script src="tools/indice.js"></script>
         <script>var current_class="jquery-sintaxe";</script>
@@ -235,7 +235,7 @@
 
         </div>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts5.js"></script>
 
     </body>
 
